--- a/reporting/build.gradle
+++ b/reporting/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	implementation "org.springframework.boot:spring-boot-starter-webflux"
+	implementation 'org.slf4j:slf4j-api:2.0.5'
 }
 
 tasks.named('test') {
