TransactionReport developemnt and test
TransactionReport developemnt and test

--- a/reporting/src/main/resources/application.yml
+++ b/reporting/src/main/resources/application.yml
@@ -2,6 +2,7 @@ rdpPymnt:
     baseUrl: https://sandbox-reporting.rpdpymnt.com
     serviceEndpoints:
         login: /api/v3/merchant/user/login
+        transactionReport: /api/v3/transactions/report
 server:
     port: 8443
     ssl:
