--- a/reporting/build.gradle
+++ b/reporting/build.gradle
@@ -24,9 +24,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	//implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	implementation "org.springframework.boot:spring-boot-starter-webflux"
 	implementation 'org.slf4j:slf4j-api:2.0.5'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
 }
 
 tasks.named('test') {
