--- a/reporting/src/main/resources/application.yml
+++ b/reporting/src/main/resources/application.yml
@@ -5,6 +5,7 @@ rdpPymnt:
         transactionReport: /api/v3/transactions/report
         transactionsList: /api/v3/transaction/list
         transaction: /api/v3/transaction
+        client: /api/v3/client
 server:
     port: 8443
     ssl:
